syntax = "proto3";

package cad.document;

import "layer.proto";
import "entity.proto";

// Document definition
message Document {
    string id = 1;
    string name = 2;
    string version = 3;
    string description = 4;
    map<string, string> metadata = 5;
    string created_at = 6;
    string modified_at = 7;
    string current_layer_id = 8;
    int32 layer_count = 9;
    int32 entity_count = 10;
}

// Document statistics
message DocumentStatistics {
    string name = 1;
    string created_at = 2;
    string modified_at = 3;
    int32 layer_count = 4;
    int32 entity_count = 5;
    map<string, int32> entities_by_layer = 6;
}

// Document operations
message CreateDocumentRequest {
    string name = 1;
    optional string description = 2;
    map<string, string> metadata = 3;
}

message CreateDocumentResponse {
    Document document = 1;
    bool success = 2;
    string error_message = 3;
}

message OpenDocumentRequest {
    string document_id = 1;
}

message OpenDocumentResponse {
    Document document = 1;
    bool found = 2;
    string error_message = 3;
}

message SaveDocumentRequest {
    string document_id = 1;
    optional string file_path = 2;
    optional string format = 3; // "json", "binary"
}

message SaveDocumentResponse {
    bool success = 1;
    string file_path = 2;
    string error_message = 3;
}

message LoadDocumentRequest {
    string file_path = 1;
    optional string format = 2; // "json", "binary"
}

message LoadDocumentResponse {
    Document document = 1;
    bool success = 2;
    string error_message = 3;
}

message UpdateDocumentRequest {
    string document_id = 1;
    optional string name = 2;
    optional string description = 3;
    map<string, string> metadata = 4;
}

message UpdateDocumentResponse {
    Document document = 1;
    bool success = 2;
    string error_message = 3;
}

message DeleteDocumentRequest {
    string document_id = 1;
}

message DeleteDocumentResponse {
    bool success = 1;
    string error_message = 2;
}

message GetDocumentStatisticsRequest {
    string document_id = 1;
}

message GetDocumentStatisticsResponse {
    DocumentStatistics statistics = 1;
    bool success = 2;
    string error_message = 3;
}

message ListDocumentsRequest {
    optional int32 limit = 1;
    optional int32 offset = 2;
}

message ListDocumentsResponse {
    repeated Document documents = 1;
    int32 total_count = 2;
    bool success = 3;
    string error_message = 4;
}
